2008-10-08  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9516: htmlARea RTE: Move link tags to head

2008-10-05  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9490: htmlArea RTE: Opera 9.52 sometimes refuses to insert a node

2008-10-04  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up for issue #9472: htmlArea RTE: Safari may crash when the RTE closes
	* Fixed bug #9484: htmlArea RTE: context menu raises an error when link button is not configured

2008-10-04  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9479: Selected items are not visible after saving the form in BE

2008-10-03  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9452: config.absRefPrefix is applied only to a fixed set of directories
	* Fixed bug #7059: Improve database performance for external database host

2008-10-02  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9444: htmlArea RTE: Incorrect assigment of class to one line <ol> in Firefox
	* Fixed bug #9472: htmlArea RTE: Safari may crash when the RTE closes

2008-10-01  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9464: htmlArea RTE: url auto-detect feature not working in Firefox
	* Fixed issue #9467: htmlArea RTE: cleanup in FE plugin

2008-10-01  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #9442: SQL LIKE wildcards are not escaped correctly for list queries
	* Fixed bug #9408: Selecting by tag using wildcards does not work with database disposal of t3lib_cache

2008-10-01  Ernesto Baschny  <ernst@cron-it.de>

	* Added feature #6525: .wrapItemAndSub property for GMENU

2008-09-29  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to issue #9375: Add DTD to htmlArea RTE iframe document
	* Fixed bug #9449: htmlArea RTE: Opera sometimes raises a JavaScript error when the RTE closes

2008-09-28  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #8518: Wrong JavaScript inclusion in t3lib_TCEforms
	* Fixed bug #9335: Internal caching in t3lib_pageSelect::getRootLine() has no effect
