@@ -44,9 +44,14 @@ InlineElements = HTMLArea.Plugin.extend({
 	 * This function gets called by the base constructor
 	 */
 	configurePlugin : function (editor) {
-		
-		this.allowedAttributes = new Array("id", "title", "lang", "xml:lang", "dir", (HTMLArea.is_gecko?"class":"className"));
-		
+
+			// Setting the array of allowed attributes on inline elements
+		if (this.editor.plugins.TextStyle && this.editor.plugins.TextStyle.instance) {
+			this.allowedAttributes = this.editor.plugins.TextStyle.instance.allowedAttributes;
+		} else {
+			this.allowedAttributes = new Array("id", "title", "lang", "xml:lang", "dir", (HTMLArea.is_gecko?"class":"className"));
+		}
+			// Getting tags configuration for inline elements
 		if (this.editorConfiguration.buttons.textstyle) {
 			this.tags = this.editorConfiguration.buttons.textstyle.tags;
 		}
@@ -168,6 +173,17 @@ InlineElements = HTMLArea.Plugin.extend({
 	},
 	
 	/*
+	 * This function adds an attribute to the array of allowed attributes on inline elements
+	 *
+	 * @param	string	attribute: the name of the attribute to be added to the array
+	 *
+	 * @return	void
+	 */
+	addAllowedAttribute : function (attribute) {
+		this.allowedAttributes.push(attribute);
+	},
+	
+	/*
 	 * This function gets called when some inline element button was pressed.
 	 */
 	onButtonPress : function (editor, id) {
@@ -205,7 +221,7 @@ InlineElements = HTMLArea.Plugin.extend({
 		var elementIsAncestor = false;
 		var selectionEmpty = editor._selectionEmpty(selection);
 		if (HTMLArea.is_ie) {
-			var bookmark = range.getBookmark();
+			var bookmark = editor.getBookmark(range);
 		}
 			// Check if the chosen element is among the ancestors
 		for (var i = 0; i < ancestors.length; ++i) {
@@ -218,7 +234,7 @@ InlineElements = HTMLArea.Plugin.extend({
 		if (!selectionEmpty) {
 				// The selection is not empty.
 			for (var i = 0; i < ancestors.length; ++i) {
-				fullNodeSelected = (HTMLArea.is_ie && ((editor._statusBarTree.selected === ancestors[i] && ancestors[i].innerText === range.text) || (!editor._statusBarTree.selected && ancestors[i].innerText === range.text)))
+				fullNodeSelected = (HTMLArea.is_ie && ((selection.type !== "Control" && ancestors[i].innerText === range.text) || (selection.type === "Control" && ancestors[i].innerText === range.item(0).text)))
 							|| (HTMLArea.is_gecko && ((editor._statusBarTree.selected === ancestors[i] && ancestors[i].textContent === range.toString()) || (!editor._statusBarTree.selected && ancestors[i].textContent === range.toString())));
 				if (fullNodeSelected) {
 					if (!HTMLArea.isBlockElement(ancestors[i])) {
@@ -240,43 +256,23 @@ InlineElements = HTMLArea.Plugin.extend({
 			}
 			if (element !== "none" && !(fullNodeSelected && elementIsAncestor)) {
 					// Add markup
+				var newElement = editor._doc.createElement(element);
+				if (element === "bdo") {
+					newElement.setAttribute("dir", "rtl");
+				}
 				if (HTMLArea.is_gecko) {
 					if (fullNodeSelected && editor._statusBarTree.selected) {
 						if (HTMLArea.is_safari) {
-							this.editor.selectNode(parent);
-							range = this.editor._createRange(this.editor._getSelection());
+							editor.selectNode(parent);
+							selection = editor._getSelection();
+							range = editor._createRange(selection);
 						} else {
 							range.selectNode(parent);
 						}
 					}
-					var newElement = this.editor._doc.createElement(element);
-					if (element === "bdo") {
-						newElement.setAttribute("dir", "rtl");
-					}
-						// Sometimes Opera 9.25 raises a bad boundary points error
-					if (HTMLArea.is_opera) {
-						try {
-							range.surroundContents(newElement);
-						} catch(e) {
-							newElement.appendChild(range.extractContents());
-							range.insertNode(newElement);
-						}
-					} else {
-						range.surroundContents(newElement);
-					}
-						// Sometimes Firefox inserts empty elements just outside the boundaries of the range
-					var neighbour = newElement.previousSibling;
-					if (neighbour && (neighbour.nodeType != 3) && !/\S/.test(neighbour.textContent)) {
-						HTMLArea.removeFromParent(neighbour);
-					}
-					neighbour = newElement.nextSibling;
-					if (neighbour && (neighbour.nodeType != 3) && !/\S/.test(neighbour.textContent)) {
-						HTMLArea.removeFromParent(neighbour);
-					}
+					editor.wrapWithInlineElement(newElement, selection, range);
 					if (fullNodeSelected && editor._statusBarTree.selected && !HTMLArea.is_safari) {
-						this.editor.selectNodeContents(newElement.lastChild, false);
-					} else {
-						this.editor.selectNodeContents(newElement, false);
+						editor.selectNodeContents(newElement.lastChild, false);
 					}
 					range.detach();
 				} else {
@@ -296,61 +292,7 @@ InlineElements = HTMLArea.Plugin.extend({
 							editor.selectNodeContents(newElement, false);
 						}
 					} else {
-						var rangeStart = range.duplicate();
-						rangeStart.collapse(true);
-						var parentStart = rangeStart.parentElement();
-						var rangeEnd = range.duplicate();
-						rangeEnd.collapse(true);
-						var newRange = editor._createRange();
-						
-						var parentEnd = rangeEnd.parentElement();
-						var upperParentStart = parentStart;
-						if (parentStart !== parent) {
-							while (upperParentStart.parentNode !== parent) {
-								upperParentStart = upperParentStart.parentNode;
-							}
-						}
-						
-						var newElement = editor._doc.createElement(element);
-						newElement.innerHTML = range.htmlText;
-							// IE eats spaces on the start boundary
-						if (range.htmlText.charAt(0) === "\x20") {
-							newElement.innerHTML = "&nbsp;" + newElement.innerHTML;
-						}
-						var newElementClone = newElement.cloneNode(true);
-						range.pasteHTML(newElement.outerHTML);
-							// IE inserts the element as the last child of the start container
-						if (parentStart !== parent
-								&& parentStart.lastChild
-								&& parentStart.lastChild.nodeType === 1
-								&& parentStart.lastChild.nodeName.toLowerCase() === element) {
-							parent.insertBefore(newElementClone, upperParentStart.nextSibling);
-							parentStart.removeChild(parentStart.lastChild);
-								// Sometimes an empty previous sibling was created
-							if (newElementClone.previousSibling
-									&& newElementClone.previousSibling.nodeType === 1
-									&& !newElementClone.previousSibling.innerText) {
-								parent.removeChild(newElementClone.previousSibling);
-							}
-								// The bookmark will not work anymore
-							newRange.moveToElementText(newElementClone);
-							newRange.collapse(false);
-							newRange.select();
-						} else {
-								// Working around IE boookmark bug
-							if (parentStart != parentEnd) {
-								var newRange = editor._createRange();
-								if (newRange.moveToBookmark(bookmark)) {
-									newRange.collapse(false);
-									newRange.select();
-								}
-							} else {
-								range.collapse(false);
-							}
-						}
-						try { // normalize() is not available in IE5.5
-							parent.normalize();
-						} catch(e) { }
+						editor.wrapWithInlineElement(newElement, selection, range);
 					}
 				}
 			} else {
@@ -359,7 +301,7 @@ InlineElements = HTMLArea.Plugin.extend({
 					if (elementIsAncestor) {
 						parent = ancestors[elementAncestorIndex];
 					}
-					this.removeMarkup(parent);
+					editor.removeMarkup(parent);
 				}
 			}
 		} else {
@@ -369,7 +311,7 @@ InlineElements = HTMLArea.Plugin.extend({
 					if (elementIsAncestor) {
 						parent = ancestors[elementAncestorIndex];
 					}
-					this.removeMarkup(parent);
+					editor.removeMarkup(parent);
 				} else {
 					var bookmark = this.editor.getBookmark(range);
 					var newElement = this.remapMarkup(parent, element);
@@ -409,19 +351,6 @@ InlineElements = HTMLArea.Plugin.extend({
 	},
 	
 	/*
-	 * This function removes the given markup element
-	 */
-	removeMarkup : function(element) {
-		var bookmark = this.editor.getBookmark(this.editor._createRange(this.editor._getSelection()));
-		var parent = element.parentNode;
-		while (element.firstChild) {
-			parent.insertBefore(element.firstChild, element);
-		}
-		parent.removeChild(element);
-		this.editor.selectRange(this.editor.moveToBookmark(bookmark));
-	},
-	
-	/*
 	* This function gets called when the toolbar is updated
 	*/
 	onUpdateToolbar : function () {
@@ -440,7 +369,7 @@ InlineElements = HTMLArea.Plugin.extend({
 				var ancestors = editor.getAllAncestors();
 				for (var i = 0; i < ancestors.length; ++i) {
 					fullNodeSelected = (editor._statusBarTree.selected === ancestors[i])
-						&& ((HTMLArea.is_gecko && ancestors[i].textContent === range.toString()) || (HTMLArea.is_ie && ancestors[i].innerText === range.text));
+						&& ((HTMLArea.is_gecko && ancestors[i].textContent === range.toString()) || (HTMLArea.is_ie && ((sel.type !== "Control" && ancestors[i].innerText === range.text) || (sel.type === "Control" && ancestors[i].innerText === range.item(0).text))));
 					if (fullNodeSelected) {
 						if (!HTMLArea.isBlockElement(ancestors[i])) {
 							tagName = ancestors[i].nodeName.toLowerCase();
@@ -455,7 +384,7 @@ InlineElements = HTMLArea.Plugin.extend({
 				}
 			}
 			var selectionInInlineElement = tagName && this.REInlineElements.test(tagName);
-			var disabled = !this.endPointsInSameBlock() || (fullNodeSelected && !tagName) || (selectionEmpty && !selectionInInlineElement);
+			var disabled = !editor.endPointsInSameBlock() || (fullNodeSelected && !tagName) || (selectionEmpty && !selectionInInlineElement);
 			
 			var obj = editor.config.customSelects["FormatText"];
 			if ((typeof(obj) !== "undefined") && (typeof(editor._toolbarObjects[obj.id]) !== "undefined")) {
@@ -481,20 +410,6 @@ InlineElements = HTMLArea.Plugin.extend({
 					obj.state("enabled", !disabled);
 				}
 			}
-		}
-	},
-	
-	/*
-	 * This function determines if the end poins of the current selection are within the same block
-	 */
-	endPointsInSameBlock : function() {
-		var selection = this.editor._getSelection();
-		if (this.editor._selectionEmpty(selection)) {
-			return true;
-		} else {
-			var parent = this.editor.getParentElement(selection);
-			var endBlocks = this.editor.getEndBlocks(selection);
-			return (endBlocks.start === endBlocks.end && !/^(table|thead|tbody|tfoot|tr)$/i.test(parent.nodeName));
 		}
 	},
 	
