@@ -89,6 +89,9 @@ TextStyle = HTMLArea.Plugin.extend({
 		 */
 		this.REInlineTags = /^(abbr|acronym|b|bdo|big|cite|code|del|dfn|em|i|ins|kbd|q|samp|small|span|strike|strong|sub|sup|tt|u|var)$/;
 		
+			// Allowed attributes on inline elements
+		this.allowedAttributes = new Array("id", "title", "lang", "xml:lang", "dir", (HTMLArea.is_gecko?"class":"className"));
+		
 		/*
 		 * Registering plugin "About" information
 		 */
@@ -124,7 +127,18 @@ TextStyle = HTMLArea.Plugin.extend({
 	isInlineElement : function (el) {
 		return el && (el.nodeType === 1) && this.REInlineTags.test(el.nodeName.toLowerCase());
 	},
-	
+
+	/*
+	 * This function adds an attribute to the array of allowed attributes on inline elements
+	 *
+	 * @param	string	attribute: the name of the attribute to be added to the array
+	 *
+	 * @return	void
+	 */
+	addAllowedAttribute : function (attribute) {
+		this.allowedAttributes.push(attribute);
+	},
+
 	/*
 	 * This function gets called when some style in the drop-down list applies it to the highlighted textt
 	 */
@@ -166,80 +180,11 @@ TextStyle = HTMLArea.Plugin.extend({
 				// The selection is not empty, nor full element
 			if (className !== "none") {
 					// Add span element with class attribute
+				var newElement = editor._doc.createElement("span");
+				HTMLArea._addClass(newElement, className);
+				editor.wrapWithInlineElement(newElement, selection, range);
 				if (HTMLArea.is_gecko) {
-					var newElement = this.editor._doc.createElement("span");
-					HTMLArea._addClass(newElement, className);
-					range.surroundContents(newElement);
-					newElement.normalize();
-					parent.normalize();
-						// Firefox sometimes inserts empty elements just outside the boundaries of the range
-					var neighbour = newElement.previousSibling;
-					if (neighbour && (neighbour.nodeType != 3) && !/\S/.test(neighbour.textContent)) {
-						HTMLArea.removeFromParent(neighbour);
-					}
-					neighbour = newElement.nextSibling;
-					if (neighbour && (neighbour.nodeType != 3) && !/\S/.test(neighbour.textContent)) {
-						HTMLArea.removeFromParent(neighbour);
-					}
-					this.editor.selectNodeContents(newElement, false);
 					range.detach();
-				} else {
-					var rangeStart = range.duplicate();
-					rangeStart.collapse(true);
-					var parentStart = rangeStart.parentElement();
-					var rangeEnd = range.duplicate();
-					rangeEnd.collapse(true);
-					var parentEnd = rangeEnd.parentElement();
-					var newRange = editor._createRange();
-					
-					var upperParentStart = parentStart;
-					if (parentStart !== parent) {
-						while (upperParentStart.parentNode !== parent) {
-							upperParentStart = upperParentStart.parentNode;
-						}
-					}
-						
-					var newElement = editor._doc.createElement("span");
-					HTMLArea._addClass(newElement, className);
-					newElement.innerHTML = range.htmlText;
-						// IE eats spaces on the start boundary
-					if (range.htmlText.charAt(0) === "\x20") {
-						newElement.innerHTML = "&nbsp;" + newElement.innerHTML;
-					}
-					var newElementClone = newElement.cloneNode(true);
-					range.pasteHTML(newElement.outerHTML);
-						// IE inserts the element as the last child of the start container
-					if (parentStart !== parent
-							&& parentStart.lastChild
-							&& parentStart.lastChild.nodeType === 1
-							&& parentStart.lastChild.nodeName.toLowerCase() === "span") {
-						parent.insertBefore(newElementClone, upperParentStart.nextSibling);
-						parentStart.removeChild(parentStart.lastChild);
-							// Sometimes an empty previous sibling was created
-						if (newElementClone.previousSibling
-								&& newElementClone.previousSibling.nodeType === 1
-								&& !newElementClone.previousSibling.innerText) {
-							parent.removeChild(newElementClone.previousSibling);
-						}
-							// The bookmark will not work anymore
-						newRange.moveToElementText(newElementClone);
-						newRange.collapse(false);
-						newRange.select();
-					} else {
-							// Working around IE boookmark bug
-						if (parentStart != parentEnd) {
-							var newRange = editor._createRange();
-							if (newRange.moveToBookmark(bookmark)) {
-								newRange.collapse(false);
-								newRange.select();
-							}
-						} else {
-							range.collapse(false);
-						}
-					}
-					try { // normalize() not available in IE5.5
-						parent.normalize();
-					} catch(e) { }
 				}
 			}
 		} else {
@@ -253,39 +198,13 @@ TextStyle = HTMLArea.Plugin.extend({
 					HTMLArea._addClass(parent, className);
 				}
 					// Remove the span tag if it has no more attribute
-				if ((parent.nodeName.toLowerCase() === "span") && !this.hasAllowedAttributes(parent)) {
-					this.removeMarkup(parent);
+				if ((parent.nodeName.toLowerCase() === "span") && !HTMLArea.hasAllowedAttributes(parent, this.allowedAttributes)) {
+					editor.removeMarkup(parent);
 				}
 			}
 		}
 	},
-	
-	/*
-	 * This function verifies if the element has any of the allowed attributes
-	 */
-	hasAllowedAttributes : function(element) {
-		var allowedAttributes = new Array("id", "title", "lang", "xml:lang", "dir", "class", "className");
-		for (var i = 0; i < allowedAttributes.length; ++i) {
-			if (element.getAttribute(allowedAttributes[i])) {
-				return true;
-			}
-		}
-		return false;
-	},
-	
-	/*
-	 * This function removes the given markup element
-	 */
-	removeMarkup : function(element) {
-		var bookmark = this.editor.getBookmark(this.editor._createRange(this.editor._getSelection()));
-		var parent = element.parentNode;
-		while (element.firstChild) {
-			parent.insertBefore(element.firstChild, element);
-		}
-		parent.removeChild(element);
-		this.editor.selectRange(this.editor.moveToBookmark(bookmark));
-	},
-	
+
 	/*
 	 * This function gets called when the plugin is generated
 	 * Get the classes configuration and initiate the parsing of the style sheets
@@ -512,7 +431,7 @@ TextStyle = HTMLArea.Plugin.extend({
 				}
 			}
 			var selectionInInlineElement = tagName && this.REInlineTags.test(tagName);
-			var disabled = !this.endPointsInSameBlock() || (fullNodeSelected && !tagName) || (selectionEmpty && !selectionInInlineElement);
+			var disabled = !editor.endPointsInSameBlock() || (fullNodeSelected && !tagName) || (selectionEmpty && !selectionInInlineElement);
 			if (!disabled && !tagName) {
 				tagName = "span";
 			}
@@ -520,21 +439,7 @@ TextStyle = HTMLArea.Plugin.extend({
 			this.updateValue(dropDownId, tagName, classNames, selectionEmpty, fullNodeSelected, disabled);
 		}
 	},
-	
-	/*
-	 * This function determines if the end poins of the current selection are within the same block
-	 */
-	endPointsInSameBlock : function() {
-		var selection = this.editor._getSelection();
-		if (this.editor._selectionEmpty(selection)) {
-			return true;
-		} else {
-			var parent = this.editor.getParentElement(selection);
-			var endBlocks = this.editor.getEndBlocks(selection);
-			return (endBlocks.start === endBlocks.end && !/^(body|table|thead|tbody|tfoot|tr)$/i.test(parent.nodeName));
-		}
-	},
-	
+
 	updateValue : function(dropDownId, tagName, classNames, selectionEmpty, fullNodeSelected, disabled) {
 		var editor = this.editor;
 		var select = document.getElementById(editor._toolbarObjects[dropDownId]["elementId"]);
