@@ -1,6 +1,7 @@
 2008-10-08  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #9516: htmlARea RTE: Move link tags to head
+	* Added feature #9521: htmlArea RTE: factor out some functions dealing with inline elements
 
 2008-10-05  Stanislas Rolland  <typo3@sjbr.ca>
 
